@@ -645,3 +645,4 @@ m4_include(tests/t_automate_attributes.at)
 m4_include(tests/t_unidiff3.at)
 m4_include(tests/t_netsync_permissions.at)
 m4_include(tests/t_update_with_blocked_rename.at)
+m4_include(tests/t_drop_vs_dropadd.at)
